# Pico-Lights

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_tcp_server.py
include/pixels/: pixels.h
include/tcp_client/: tcp_client.h  tcp_struct.h
include/tcp_request_body/: request_body.h  request_struct.h
main_node/: Cargo.toml  README.md  test_client.py
main_node/src/: main.rs
src/: main.cpp
src/pixels/: pixels.cpp
src/tcp_client/: picow_tcp_client.c  tcp_client.cpp
src/tcp_request_body/: request_body.cpp
